agregando textos en mi parrafo

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 porttitor elit eu odio aliquet, faucibus consectetur nisi lacinia. Aenean auctor felis metus, 
                 in faucibus ante ornare quis. Etiam quis hendrerit turpis. Phasellus a molestie sem. Cras nec 
                 eros lorem. Curabitur finibus finibus maximus. Etiam porttitor eleifend tempus. Pellentesque 
-                habitant morbi tristique. </p>
+                habitant morbi tristique. ESTO ES UNA PRUEBA DE GIT</p>
 
               </div>
               
