subida 4ta entrega

--- a/inspiracion.html
+++ b/inspiracion.html
@@ -133,51 +133,17 @@
 
 
 
-
-
-
-
-
-
-
-
-
- <!--   PRUEBA BOOTSTRAP ARRIBA -->
-
-
-
-<!--
-<div class="gridUnoI">
-
-  <h1 class="fraseUnoInspiracion"> —“Proin velit consectetur urna lacus, non fermentum fringilla”— </h1>
-  <img class="img1I" src="img/imagenI1.jpg" alt="Inspiracion1">
-</div>
-
-
-<div class="gridDosI">
-  <img class="img2I" src="img/imagenI2.jpg" alt="Inspiracion2">
-  <h1 class="fraseDosInspiracion"> —“Proin velit consectetur urna lacus, non fermentum fringilla”— </h1>
-
-  <iframe class="videoI" width="615" height="346" src="https://www.youtube.com/embed/cfOa1a8hYP8" frameborder="0" 
-  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> <br></br>
-
-</div>
--->
-
-
-
-
-
 <footer class="footer">
      
-  <p class="footer__parrafo"> Proin consectetur urna lacus, non fermentum velit vulputate at. </p>
+    <p class="footer__parrafo"> José A. Cabrera 2911, CABA — Doctor Real 563, Luján, Pcia de Buenos Aires,  <br> Kunst©2020 </br> </p>
 
-  <div class="footer__redes">  
-  <img class="waicon" src="img/whatsapp.svg" width="20" height="20" alt="whatsapp"> +54 11 3038 0378  
-      <a href="https://www.instagram.com"><img width="#" src="img/instagram.svg" width="20" height="20" alt="instagram"></a>
-      <a href="https://www.facebook.com"><img width="#" src="img/face.svg" width="20" height="20" alt="face"></a>
-  </div> 
+    <div class="footer__redes">  
+    <img class="waicon" src="img/whatsapp.svg" width="20" height="20" alt="whatsapp"> +54 11 3038 0378  
+        <a href="https://www.instagram.com"><img width="#" src="img/instagram.svg" width="20" height="20" alt="instagram"></a>
+        <a href="https://www.facebook.com"><img width="#" src="img/face.svg" width="20" height="20" alt="face"></a>
+    </div> 
 </footer>   
+
 
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
