--- a/nosotros.html
+++ b/nosotros.html
@@ -96,7 +96,7 @@
 
 <footer class="footer">
      
-    <p class="footer__parrafo"> Proin consectetur urna lacus, non fermentum velit vulputate at. </p>
+    <p class="footer__parrafo"> José A. Cabrera 2911, CABA — Doctor Real 563, Luján, Pcia de Buenos Aires,  <br> Kunst©2020 </br> </p>
 
     <div class="footer__redes">  
     <img class="waicon" src="img/whatsapp.svg" width="20" height="20" alt="whatsapp"> +54 11 3038 0378  
@@ -104,6 +104,7 @@
         <a href="https://www.facebook.com"><img width="#" src="img/face.svg" width="20" height="20" alt="face"></a>
     </div> 
 </footer>   
+
 
     
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
