subida 4ta entrega ajustes

--- a/contacto.html
+++ b/contacto.html
@@ -33,7 +33,7 @@
 <section>
 
 <article>    
-  <img class="imgHeaderContacto" src="img/imagenContacto.jpg" alt="ImagenHeaderContacto">
+  <img class="imgHeaderContacto" src="img/ImagenContacto.jpg" alt="ImagenHeaderContacto">
 
   <h1 class="fraseUnoContacto"> —Escribinos! Dejanos tu mensaje o consulta— </h1>
 
