--- a/nosotros.html
+++ b/nosotros.html
@@ -31,7 +31,7 @@
 
     <div class="HeaderNosotros">
 
-    <img class="HeaderNosotros__Imagen" src="img/imagenNosotros.jpg" alt="ImagenHeaderNosotros">
+    <img class="HeaderNosotros__Imagen" src="img/ImagenNosotros.jpg" alt="ImagenHeaderNosotros">
 </div>
 
 </section>
