--- a/productos.html
+++ b/productos.html
@@ -32,7 +32,7 @@
       <section>
 
         <div class="HeaderProductos">
-          <img class="HeaderProductos__imagen" src="img/imagenproductos.jpg" alt="ImagenHeaderProductos"> <br></br>
+          <img class="HeaderProductos__imagen" src="img/ImagenProductos.jpg" alt="ImagenHeaderProductos"> <br></br>
        
        
         <h2 class="HeaderProductos__cita">Todos nuestros productos estan pintados a mano<br></br> 
